# Geny-int

./: .gitignore  CMakeLists.txt  README.md
Docs/: Geny Interface.epgz  index.html
include/controls/: AppControls.hpp
include/model/: GenyRand.hpp
include/ui/: MainWindow.hpp  QSCheckBox.hpp  QSLabel.hpp
include/ui/MainWindow/: BodyBox.hpp  FooterBox.hpp  HeaderBox.hpp
include/ui/MainWindow/BodyBox/: ConfigBox.hpp  DashBord.hpp  ModeBox.hpp  ResultBox.hpp
include/ui/MainWindow/BodyBox/DashBord/: ConfigBox.hpp  ResultBox.hpp
include/ui/MainWindow/BodyBox/DashBord/Configs/: PasswConfig.hpp  PseudoConfig.hpp  UidConfig.hpp
lib/RandomUtils/: CMakeLists.txt  RandomUtils.cpp  RandomUtils.hpp
lib/WordBase/: CMakeLists.txt  WordBase.cpp  WordBase.hpp
src/: main.cpp
src/controls/: AppControls.cpp
src/model/: GenyRand.cpp
src/ui/: MainWindow.cpp
src/ui/MainWindow/: BodyBox.cpp  FooterBox.cpp  HeaderBox.cpp
src/ui/MainWindow/BodyBox/: DashBord.cpp  ModeBox.cpp
src/ui/MainWindow/BodyBox/DashBord/: ConfigBox.cpp  ResultBox.cpp
src/ui/MainWindow/BodyBox/DashBord/Configs/: PasswConfig.cpp  PseudoConfig.cpp  UidConfig.cpp
